--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
     "ts-node": "^10.0.0",
